<resources>
    <string name="app_name">Zimp Car Sharing</string>
    <string name="login">Login</string>
    <string name="register">Registrati</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="notRegistered">Non hai un account?</string>
    <string name="phone">Telefono</string>
    <string name="generictext">testo</string>
    <string name="home">Home</string>
    <string name="editAccount">Modifica Account</string>
    <string name="save">Salva</string>
    <string name="logout">Logout</string>
    <string name="book">Prenota Auto</string>
    <string name="account">Account</string>
    <string name="filter">Filtri</string>
    <string name="rate">Tariffa</string>
    <string name="position">Posizione</string>
    <string name="confirm">Conferma</string>
    <string name="password">Password</string>
    <string name="myAuto">Le mie auto</string>
    <string name="addAuto">Aggiungi Auto</string>
    <string name="bookingTitle">Prenotazione</string>
    <string name="delete">Elimina</string>
    <string name="openMap">Apri Mappa</string>
    <string name="book2">Prenota</string>
    <string name="email">Email</string>
    <string-array name="rateOpts">
        <item>Prezzo: Crescente</item>
        <item>Prezzo: Decrescente</item>
        <item>Posizione: Più vicino</item>
        <item>Posizione: Più lontano</item>
    </string-array>

</resources>