<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF">

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/input_gb"
        android:drawableStart="@drawable/username_icon"
        android:ems="10"
        android:hint="@string/username"
        android:autofillHints="username"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_gb"
        android:drawableStart="@drawable/password_icon"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/inputUsername"
        app:layout_constraintStart_toStartOf="@+id/inputUsername"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername"
        android:autofillHints="password" />

    <Button
        android:id="@+id/inviaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/login"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inviaLogin">

        <TextView
            android:id="@+id/notRegisteredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notRegistered" />

        <TextView
            android:id="@+id/notRegisteredBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/register"
            android:textColor="#C32828"
            android:textColorHint="#C54E4E"
            android:textColorLink="#CA2A2A" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/inviaLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>