<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <TextView
        android:id="@+id/editAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/editAccount"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_gb"
        android:drawableStart="@drawable/username_icon"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAccountText"
        android:autofillHints="newUsername" />

    <EditText
        android:id="@+id/editSurname"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_gb"
        android:drawableStart="@drawable/baseline_contacts_24"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        android:autofillHints="personName" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_gb"
        android:drawableStart="@drawable/password_icon"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editPhone"
        app:layout_constraintStart_toStartOf="@+id/editPhone"
        app:layout_constraintTop_toBottomOf="@+id/editPhone"
        android:autofillHints="newPassword" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_gb"
        android:drawableStart="@drawable/baseline_call_24"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editSurname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editSurname"
        app:layout_constraintTop_toBottomOf="@+id/editSurname"
        android:autofillHints="phoneNumber" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_gb"
        android:drawableStart="@drawable/baseline_contacts_24"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editUsername"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editUsername"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        android:autofillHints="personFamilyName" />

    <Button
        android:id="@+id/accountSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>