<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/register"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputUsernameRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_gb"
        android:drawableLeft="@drawable/username_icon"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_gb"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_gb"
        android:drawableLeft="@drawable/password_icon"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText4"
        app:layout_constraintStart_toStartOf="@+id/editTextText4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_gb"
        android:drawableLeft="@drawable/email_icon"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/inputUsernameRegister"
        app:layout_constraintStart_toStartOf="@+id/inputUsernameRegister"
        app:layout_constraintTop_toBottomOf="@+id/inputUsernameRegister" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_gb"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText3"
        app:layout_constraintStart_toStartOf="@+id/editTextText3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>