<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#989898"
    android:backgroundTint="#989898"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Zimp Car Sharing"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="594dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle">

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <Button
            android:id="@+id/prenotaBtnMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/book" />

        <Button
            android:id="@+id/accountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/account" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:text="Button" />

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/logout" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>